[package]
name = "secure-iot-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# transport module
qp2p = "0.28.7"
tokio = {version = "1", features = ["full"]}
bytes = {version = "1.0.1", features = ["serde"]}
color-eyre = "0.6.2"

# storage module
rocksdb = "0.18.0"
hasher = "0.1"
cita_trie = "3.0.2"

[features]
