[package]
name = "secure-iot-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# utils
hex = "0.4"
lazy_static = "1.4.0"
async_once = "0.2.6"
chrono = "0.4"

# transport module
qp2p = "0.28.7"
tokio = {version = "1", features = ["full"]}
bytes = {version = "1.0.1", features = ["serde"]}
color-eyre = "0.6.2"

# storage module
# rocksdb = "0.18.0"
sled = "0.34.7"
hasher = "0.1"
cita_trie = { path = "cita-trie" }

# signature module
secp256k1 = {version = "0.24.0", features = ["rand", "bitcoin_hashes"]}

# communication module 
serde = "1.0.143"
serde_json = "1.0"
serde-big-array = "0.4.1"

[features]
